--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.4"
+  },
+  "scripts":{
+    "dev":"node main.js"
   }
 }
